package iotsimulator.output;

public interface Output {

    void sendMessage(String message);

}
